examples/test/testpolicy16821.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16821
  namespace: namespace405
spec:
  podSelector:
    matchLabels:
      key30: value5
      key15: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value20
          key8: value5
      podSelector:
        matchLabels:
          key7: value8
          key33: value43
          key8: value22
